Clean up more pages